--- a/css/terminal.css
+++ b/css/terminal.css
@@ -20,7 +20,8 @@
 
 #terminal .buttons {
     width: 100%;
-    position: fixed;
+    position: sticky;
+    top: 0;
 } 
 
 #terminal .buttons .resize {
@@ -42,7 +43,7 @@
 #terminal .buttons .close {
     position: relative;
     top: 7px;
-    left: -3px;
+    left: 25px;
     transform: translate(-50%, -50%);
     float: right;
     background: none;
