--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -114,17 +114,17 @@ li a:hover {
     color: #00A8E8;
 }
 
-.spinner {
-    margin: 0 auto;
-    margin-top: 10px;
-    width: 50px;
-    height: 50px;
-    border: 3px solid rgba(255, 255, 255, .3);
-    border-radius: 50%;
-    border-top-color: #fff;
-    animation: spin 1s ease-in-out infinite;
-    -webkit-animation: spin 1s ease-in-out infinite;
-}
+/*.spinner {*/
+/*    margin: 0 auto;*/
+/*    margin-top: 10px;*/
+/*    width: 50px;*/
+/*    height: 50px;*/
+/*    border: 3px solid rgba(255, 255, 255, .3);*/
+/*    border-radius: 50%;*/
+/*    border-top-color: #fff;*/
+/*    animation: spin 1s ease-in-out infinite;*/
+/*    -webkit-animation: spin 1s ease-in-out infinite;*/
+/*}*/
 
 .pagination {
     margin-top: 10px;
